@@ -1,4 +1,6 @@
 1.6.x:
+    Fixed #2044 - fixed virtual fact
+
     Fixed lib install permissions
 
     Fixed #2040 - Facter should provide a macosx_productversion_major fact
